Update Eleanor - Stocks.ipynb

--- a/Eleanor - Stocks.ipynb
+++ b/Eleanor - Stocks.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "caec8f72",
    "metadata": {},
    "outputs": [
@@ -58,8 +58,8 @@
     "plt.xlabel('Date')\n",
     "plt.ylabel('Market Cap in 10s of Billions')\n",
     "plt.title('Live Nation Entertainment Inc. Market Cap Trend')\n",
-    "equation = f\"y = {round(slope, 2)}x + {round(intercept, 2)}\"\n",
-    "corr = f\"Correlation (r): {rvalue:.2f}\"\n",
+    "#equation = f\"y = {round(slope, 2)}x + {round(intercept, 2)}\"\n",
+    "#corr = f\"Correlation (r): {rvalue:.2f}\"\n",
     "#plt.annotate(equation, xy=(LYV['Date'].min(), LYV['Market Cap'].max()), xycoords='data', xytext=(20, -30),\n",
     "             #textcoords='offset points', arrowprops=dict(arrowstyle=\"->\", connectionstyle=\"arc3,rad=.2\"))\n",
     "#plt.annotate(corr, xy=(LYV['Date'].min(), LYV['Market Cap'].max()), xycoords='data', xytext=(20, -50),\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "8364fc63",
    "metadata": {},
    "outputs": [
@@ -118,8 +118,8 @@
     "plt.xlabel('Date')\n",
     "plt.ylabel('Market Cap in 10s of Billions')\n",
     "plt.title('AMC Entertainment Holdings Inc. Market Cap Trend')\n",
-    "equation = f\"y = {round(slope, 2)}x + {round(intercept, 2)}\"\n",
-    "corr = f\"Correlation (r): {rvalue:.2f}\"\n",
+    "#equation = f\"y = {round(slope, 2)}x + {round(intercept, 2)}\"\n",
+    "#corr = f\"Correlation (r): {rvalue:.2f}\"\n",
     "#plt.annotate(equation, xy=(amc['Date'].min(), amc['Market Cap'].max()), xycoords='data', xytext=(20, -30),\n",
     "            # textcoords='offset points', arrowprops=dict(arrowstyle=\"->\", connectionstyle=\"arc3,rad=.2\"))\n",
     "#plt.annotate(corr, xy=(amc['Date'].min(), amc['Market Cap'].max()), xycoords='data', xytext=(20, -50),\n",
