--- a/eleanor.ipynb
+++ b/eleanor.ipynb
@@ -1,22 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "56f0215c",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0cbde47b",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "import time\n",
-    "import datetime\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy import stats "
+    "import time \n",
+    "import datetime \n",
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt \n",
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "caec8f72",
+   "execution_count": 4,
+   "id": "521dee1e",
    "metadata": {},
    "outputs": [
     {
@@ -68,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "8364fc63",
+   "execution_count": 5,
+   "id": "32501be3",
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e4693f88",
+   "execution_count": 6,
+   "id": "1d93ddd2",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +334,7 @@
        "[836 rows x 9 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,13 +363,13 @@
     "# Rearrange columns with \"Ticker\" as the first column\n",
     "combined_df = combined_df[['Ticker'] + [col for col in combined_df.columns if col != 'Ticker']]\n",
     "\n",
-    "combined_df\n"
+    "combined_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28475a7f",
+   "id": "6151d6d0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -389,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
