corrected PNG files

--- a/combo #5.ipynb
+++ b/combo #5.ipynb
@@ -264,12 +264,24 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "df2927ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save combined_df as csv \n",
+    "FilePath = \"outsource_data.csv\"\n",
+    "combined_df.to_csv(FilePath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "5abe83d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Define a function for making scatter plot pre-cvoid\n",
-    "def precovid(x_values, y_values, title=''):\n",
+    "def precovid(x_values, y_values, ticker, title=''):\n",
     "    (slope, intercept, r_value, p_value, std_err) = linregress(x_values, y_values)\n",
     "\n",
     "    regress_values = x_values * slope + intercept\n",
@@ -287,19 +299,21 @@
     "    plt.ylabel('Volume')\n",
     "    plt.title(title)\n",
     "\n",
+    "    plt.savefig(f\"output_data/PreCovid_{ticker}.png\")\n",
     "    plt.show()\n",
+    "    \n",
     "    print(f\"The r-value is: {r_value}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "94fd9e0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Define a function for making scatter plot post-covid\n",
-    "def postcovid(x_values, y_values, title=''):\n",
+    "def postcovid(x_values, y_values, ticker, title=''):\n",
     "    (slope, intercept, r_value, p_value, std_err) = linregress(x_values, y_values)\n",
     "\n",
     "    regress_values = x_values * slope + intercept\n",
@@ -316,14 +330,16 @@
     "    plt.xlabel('2020 to Present')\n",
     "    plt.ylabel('Volume')\n",
     "    plt.title(title)\n",
-    "\n",
+    "    \n",
+    "    plt.savefig(f\"output_data/PosCovid_{ticker}.png\")\n",
     "    plt.show()\n",
+    "    \n",
     "    print(f\"The r-value is: {r_value}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7936ab89",
    "metadata": {},
    "outputs": [],
@@ -352,21 +368,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fbaa12eb",
+   "cell_type": "markdown",
+   "id": "d9d59aca",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Pre Coivd Ticker Linear Regression Graphs"
+    "### Linear Regression Scatter Plots on Tickers PreCovid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "33badc73",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -385,26 +399,16 @@
      "text": [
       "The r-value is: 0.2593899291496842\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "# Linear regression on PreCovid \n",
-    "precovid(precovid_lyv['Date'], precovid_lyv['Volume'], title='Linear Regression for Live Nation Entertainment PreCovid')\n",
-    "plt.savefig(\"output_data/PreCovid_LYV.png\")"
+    "precovid(precovid_lyv['Date'], precovid_lyv['Volume'], \"LYV\", title='Linear Regression for Live Nation Entertainment PreCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0c8d0b4a",
    "metadata": {},
    "outputs": [
@@ -424,25 +428,15 @@
      "text": [
       "The r-value is: 0.6786404559824524\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "precovid(precovid_amc['Date'], precovid_amc['Volume'], title='Linear Regression for AMC PreCovid')\n",
-    "plt.savefig(\"output_data/PreCovid_AMC.png\")"
+    "precovid(precovid_amc['Date'], precovid_amc['Volume'], \"AMC\", title='Linear Regression for AMC PreCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f1c6c0db",
    "metadata": {},
    "outputs": [
@@ -462,25 +456,15 @@
      "text": [
       "The r-value is: 0.1085300427206932\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "precovid(precovid_amzn['Date'], precovid_amzn['Volume'], title='Linear Regression for Amazon PreCovid')\n",
-    "plt.savefig(\"output_data/PreCovid_AMZN.png\")"
+    "precovid(precovid_amzn['Date'], precovid_amzn['Volume'], \"AMZN\", title='Linear Regression for Amazon PreCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "37666bcf",
    "metadata": {},
    "outputs": [
@@ -500,25 +484,15 @@
      "text": [
       "The r-value is: -0.4840255009507073\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "precovid(precovid_nflx['Date'], precovid_nflx['Volume'], title='Linear Regression for Netflix PreCovid')\n",
-    "plt.savefig(\"output_data/PreCovid_NFLX.png\")"
+    "precovid(precovid_nflx['Date'], precovid_nflx['Volume'], \"NFLX\", title='Linear Regression for Netflix PreCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "272be72e",
    "metadata": {},
    "outputs": [
@@ -538,25 +512,15 @@
      "text": [
       "The r-value is: -0.2683529938986158\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "precovid(precovid_dri['Date'], precovid_dri['Volume'], title='Linear Regression for Darden Resturants PreCovid')\n",
-    "plt.savefig(\"output_data/PreCovid_DRI.png\")"
+    "precovid(precovid_dri['Date'], precovid_dri['Volume'], \"DRI\", title='Linear Regression for Darden Resturants PreCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "885f8829",
    "metadata": {},
    "outputs": [
@@ -576,25 +540,15 @@
      "text": [
       "The r-value is: 0.08475899548750115\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "precovid(precovid_ruth['Date'], precovid_ruth['Volume'], title=\"Linear Regression for Ruth's Hospitality Group PreCovid\")\n",
-    "plt.savefig(\"output_data/PreCovid_Ruth.png\")"
+    "precovid(precovid_ruth['Date'], precovid_ruth['Volume'], \"RUTH\", title=\"Linear Regression for Ruth's Hospitality Group PreCovid\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "abbe9fbe",
    "metadata": {},
    "outputs": [
@@ -614,25 +568,15 @@
      "text": [
       "The r-value is: -0.6377969213249919\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "precovid(precovid_dal['Date'], precovid_dal['Volume'], title='Linear Regression for Delta Airlines PreCovid')\n",
-    "plt.savefig(\"output_data/PreCovid_DAL.png\")"
+    "precovid(precovid_dal['Date'], precovid_dal['Volume'], \"DAL\", title='Linear Regression for Delta Airlines PreCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "296a3d70",
    "metadata": {},
    "outputs": [
@@ -652,35 +596,23 @@
      "text": [
       "The r-value is: -0.44166434174075997\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "precovid(precovid_aal['Date'], precovid_aal['Volume'], title='Linear Regression for American Airlines PreCovid')\n",
-    "plt.savefig(\"output_data/PreCovid_AAL.png\")"
+    "precovid(precovid_aal['Date'], precovid_aal['Volume'], \"AAL\", title='Linear Regression for American Airlines PreCovid')\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "373d70b7",
+   "cell_type": "markdown",
+   "id": "53a9c0b7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Post Coivd Ticker Linear Regression Graphs"
+    "### Post Coivd Ticker Linear Regression Graphs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "d0bd470f",
    "metadata": {},
    "outputs": [
@@ -700,25 +632,15 @@
      "text": [
       "The r-value is: -0.3907135303243779\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "postcovid(postcovid_lyv['Date'], postcovid_lyv['Volume'], title='Linear Regression for Live Nation Entertainment PostCovid')\n",
-    "plt.savefig(\"output_data/PostCovid_LYV.png\")"
+    "postcovid(postcovid_lyv['Date'], postcovid_lyv['Volume'], \"LYV\", title='Linear Regression for Live Nation Entertainment PostCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "3e705b5e",
    "metadata": {},
    "outputs": [
@@ -738,25 +660,15 @@
      "text": [
       "The r-value is: 0.07296152679969892\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "postcovid(postcovid_amc['Date'], postcovid_amc['Volume'], title='Linear Regression for AMC PostCovid')\n",
-    "plt.savefig(\"output_data/PostCovid_AMC.png\")"
+    "postcovid(postcovid_amc['Date'], postcovid_amc['Volume'], \"AMC\", title='Linear Regression for AMC PostCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "c2fa898d",
    "metadata": {},
    "outputs": [
@@ -776,25 +688,15 @@
      "text": [
       "The r-value is: -0.35753579812315206\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "postcovid(postcovid_amzn['Date'], postcovid_amzn['Volume'], title='Linear Regression for Amazon PostCovid')\n",
-    "plt.savefig(\"output_data/PostCovid_AMZN.png\")"
+    "postcovid(postcovid_amzn['Date'], postcovid_amzn['Volume'], \"AMZN\", title='Linear Regression for Amazon PostCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "fbf150ad",
    "metadata": {},
    "outputs": [
@@ -814,25 +716,15 @@
      "text": [
       "The r-value is: 0.23123111495530405\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "postcovid(postcovid_nflx['Date'], postcovid_nflx['Volume'], title='Linear Regression for Netflix PostCovid')\n",
-    "plt.savefig(\"output_data/PostCovid_NFLX.png\")"
+    "postcovid(postcovid_nflx['Date'], postcovid_nflx['Volume'], \"NFLX\", title='Linear Regression for Netflix PostCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "324fd863",
    "metadata": {},
    "outputs": [
@@ -852,25 +744,15 @@
      "text": [
       "The r-value is: -0.5339225598843571\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "postcovid(postcovid_dri['Date'], postcovid_dri['Volume'], title='Linear Regression for Darden Restuarants PostCovid')\n",
-    "plt.savefig(\"output_data/PostCovid_DRI.png\")"
+    "postcovid(postcovid_dri['Date'], postcovid_dri['Volume'], \"DRI\", title='Linear Regression for Darden Restuarants PostCovid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "06528dbd",
    "metadata": {},
    "outputs": [
@@ -890,25 +772,15 @@
      "text": [
       "The r-value is: -0.5722574042954701\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "postcovid(postcovid_ruth['Date'], postcovid_ruth['Volume'], title=\"Linear Regression for Ruth's Hospitality PostCovid\")\n",
-    "plt.savefig(\"output_data/PostCovid_RUTH.png\")"
+    "postcovid(postcovid_ruth['Date'], postcovid_ruth['Volume'], \"RUTH\", title=\"Linear Regression for Ruth's Hospitality PostCovid\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "2d4f40de",
    "metadata": {},
    "outputs": [
@@ -928,25 +800,15 @@
      "text": [
       "The r-value is: -0.4839522370678828\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "postcovid(postcovid_dal['Date'], postcovid_dal['Volume'], title='Linear Regression for Delta Airlines Covid')\n",
-    "plt.savefig(\"output_data/PostCovid_DAL.png\")"
+    "postcovid(postcovid_dal['Date'], postcovid_dal['Volume'], \"DAL\", title='Linear Regression for Delta Airlines Covid')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "4cd5520b",
    "metadata": {},
    "outputs": [
@@ -966,26 +828,16 @@
      "text": [
       "The r-value is: -0.4150009737669756\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "postcovid(postcovid_aal['Date'], postcovid_aal['Volume'], title='Linear Regression for American Airlines PostCovid')\n",
-    "plt.savefig(\"output_data/PostCovid_AAL.png\")"
+    "postcovid(postcovid_aal['Date'], postcovid_aal['Volume'], \"AAL\", title='Linear Regression for American Airlines PostCovid')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6977a32b",
+   "id": "8a9bb0f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -993,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "185d01bf",
+   "id": "1d14b9b1",
    "metadata": {},
    "outputs": [],
    "source": []
