addition of JETS

--- a/combo #5.ipynb
+++ b/combo #5.ipynb
@@ -228,7 +228,7 @@
    ],
    "source": [
     "# Initialize a list of tickers for the stock\n",
-    "tickers = [\"LYV\", \"AMC\", \"AMZN\", \"NFLX\", \"DRI\", \"RUTH\", \"DAL\", \"AAL\"]\n",
+    "tickers = [\"LYV\", \"AMC\", \"AMZN\", \"NFLX\", \"DRI\", \"RUTH\", \"DAL\", \"AAL\", \"JETS\"]\n",
     "\n",
     "#Define the variables\n",
     "precovid_date = int(time.mktime(datetime.datetime(2015, 1, 1, 23, 59).timetuple()))\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "df2927ee",
+   "id": "52140ed9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,6 +347,7 @@
     "#Define dataframes for pre/post covid per ticker\n",
     "\n",
     "#precovid\n",
+    "precovid_lyv = combined_df[(combined_df['Ticker']=='JETS') & (combined_df['Date'].values <= 1577750400000000000)] \n",
     "precovid_lyv = combined_df[(combined_df['Ticker']=='LYV') & (combined_df['Date'].values <= 1577750400000000000)] \n",
     "precovid_amc = combined_df[(combined_df['Ticker']=='AMC') & (combined_df['Date'].values <= 1577750400000000000)]\n",
     "precovid_amzn = combined_df[(combined_df['Ticker']=='AMZN') & (combined_df['Date'].values <= 1577750400000000000)]\n",
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d59aca",
+   "id": "74c9f6b6",
    "metadata": {},
    "source": [
     "### Linear Regression Scatter Plots on Tickers PreCovid"
@@ -404,6 +405,16 @@
    "source": [
     "# Linear regression on PreCovid \n",
     "precovid(precovid_lyv['Date'], precovid_lyv['Volume'], \"LYV\", title='Linear Regression for Live Nation Entertainment PreCovid')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96fab7dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precovid"
    ]
   },
   {
@@ -604,7 +615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53a9c0b7",
+   "id": "b4f107eb",
    "metadata": {},
    "source": [
     "### Post Coivd Ticker Linear Regression Graphs"
@@ -837,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9bb0f4",
+   "id": "4f54a569",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -845,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d14b9b1",
+   "id": "c6968e28",
    "metadata": {},
    "outputs": [],
    "source": []
