--- a/flightradar24-Copy1.ipynb
+++ b/flightradar24-Copy1.ipynb
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "id": "3857a8c1",
+   "id": "04db984d",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "id": "3918bb4a",
+   "id": "25336bbc",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 375,
-   "id": "cfef5395",
+   "id": "76eaeef5",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 383,
-   "id": "058c66ec",
+   "id": "039b7708",
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e796c9",
+   "id": "c08a6252",
    "metadata": {},
    "source": [
     "# Total Market Cap Growth (Initial Graph)"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 388,
-   "id": "149fa1af",
+   "id": "c6041367",
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": 389,
-   "id": "373913b5",
+   "id": "19365c60",
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d97c436e",
+   "id": "6efb0b9b",
    "metadata": {},
    "source": [
     "## Stacked Line Chart for Market Cap"
@@ -1368,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 390,
-   "id": "53f2f062",
+   "id": "fab4c36a",
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 391,
-   "id": "978e25dc",
+   "id": "b8b5bcda",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 392,
-   "id": "76a7c954",
+   "id": "2decf9b3",
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1819,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "bc995c02",
+   "id": "c84f1758",
    "metadata": {},
    "outputs": [
     {
@@ -1955,7 +1955,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "8013caa0",
+   "id": "8b78999c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "id": "cf7960b2",
+   "id": "33e79ec4",
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820d4b2a",
+   "id": "7b8ff8dc",
    "metadata": {},
    "source": [
     "## Pie Charts"
@@ -2008,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": 421,
-   "id": "0f8fcadc",
+   "id": "31b72b7b",
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2045,7 @@
   {
    "cell_type": "code",
    "execution_count": 424,
-   "id": "f9160599",
+   "id": "cad20b3a",
    "metadata": {},
    "outputs": [
     {
@@ -2071,7 +2071,7 @@
   {
    "cell_type": "code",
    "execution_count": 425,
-   "id": "6c51787e",
+   "id": "88323818",
    "metadata": {},
    "outputs": [
     {
@@ -2095,7 +2095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1566b72d",
+   "id": "4b9251c6",
    "metadata": {},
    "source": [
     "## Double Bar Chart"
@@ -2104,7 +2104,7 @@
   {
    "cell_type": "code",
    "execution_count": 427,
-   "id": "7d9b18b9",
+   "id": "46ac8484",
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": 434,
-   "id": "f61488c0",
+   "id": "49435ae4",
    "metadata": {},
    "outputs": [
     {
@@ -2213,7 +2213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31f65d62",
+   "id": "63c698a8",
    "metadata": {},
    "source": [
     "## Market Crash on Black Monday II (March 16)\n",
@@ -2223,7 +2223,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "4c74febd",
+   "id": "fd8f3a90",
    "metadata": {},
    "outputs": [
     {
@@ -3307,7 +3307,7 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "id": "66c3d340",
+   "id": "8c79e580",
    "metadata": {},
    "outputs": [
     {
@@ -3345,7 +3345,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "id": "cbdc357f",
+   "id": "918f146b",
    "metadata": {},
    "outputs": [
     {
@@ -3441,7 +3441,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "cf669bca",
+   "id": "4f3740ec",
    "metadata": {},
    "outputs": [
     {
@@ -3472,6 +3472,22 @@
     "plt.ylabel('Collective Market Cap in 10s of Billions')\n",
     "plt.title('Collective Market Cap on Nearest Day to March 16 Each Year')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0a9a6ea",
+   "metadata": {},
+   "source": [
+    "# Pie Charts for March 16 Each Year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c3f85d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
