--- a/Final Project #1.ipynb
+++ b/Final Project #1.ipynb
@@ -803,7 +803,7 @@
     "    plt.ylabel('Volume')\n",
     "    plt.title(title)\n",
     "\n",
-    "    #plt.savefig(f\"output_data/PreCovid_{ticker}.png\")\n",
+    "    plt.savefig(f\"output_data/PreCovid_{ticker}.png\")\n",
     "    plt.show()\n",
     "    \n",
     "    print(f\"The r-value is: {r_value}\")"
@@ -835,7 +835,7 @@
     "    plt.ylabel('Market Cap in 10s Billions')\n",
     "    plt.title(title)\n",
     "    \n",
-    "    #plt.savefig(f\"output_data/PosCovid_{ticker}.png\")\n",
+    "    plt.savefig(f\"output_data/PostCovid_{ticker}.png\")\n",
     "    plt.show()\n",
     "    \n",
     "    print(f\"The r-value is: {r_value}\")"
@@ -1368,6 +1368,7 @@
     "plt.text(lowest_index, lowest_value, f'Lowest: $3.3B', ha='right', va='bottom', fontsize=10)\n",
     "plt.ylabel('Market Cap in 10s of Bilions')\n",
     "plt.title('Total Market Cap of Airline Industry Leaders')\n",
+    "plt.savefig(f\"output_data/MktCapGrowth.png\")\n",
     "plt.show()"
    ]
   },
@@ -2029,6 +2030,7 @@
     "plt.title('Airline Market Cap Percentage')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
+    "plt.savefig(f\"output_data/StackedLineChart.png\")\n",
     "plt.show()\n"
    ]
   },
@@ -2100,6 +2102,7 @@
     "plt.axis('equal')  # Equal aspect ratio ensures that the pie is drawn as a circle.\n",
     "plt.title('Market Cap Distribution at End of 2019')\n",
     "plt.ylabel('')  # To remove the y-label, as it will show the column name '2019-12-26'.\n",
+    "plt.savefig(f\"output_data/PieChart2019.png\")\n",
     "plt.show()"
    ]
   },
@@ -2125,6 +2128,7 @@
     "plt.axis('equal')\n",
     "plt.title('Market Cap Distribution at End of 2022')\n",
     "plt.ylabel('')\n",
+    "plt.savefig(f\"output_data/PieChart2022.png\")\n",
     "plt.show()"
    ]
   },
