ticker in wrong order for graph png

--- a/data Exploration and CleanUp Process.ipynb
+++ b/data Exploration and CleanUp Process.ipynb
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70db431f",
+   "id": "1bde0e58",
    "metadata": {},
    "source": [
     "PROJECT DESCRIPTION\n",
     "\n",
-    "Looking at stock trends in the stock market Pre Covid (2011-2019)  in comparison to Post Covid (2020-2025), specifically in . By comparing trends we are looking to see what industries took a hit with Covid, and which industries were able to recover. "
+    "Looking at stock trends in the stock market Pre Covid (2011-2019)  in comparison to Post Covid (2020-2025), specifically in the airline industry. By comparing trends we are looking to see what airline took a hit with Covid, and which industries were able to recover. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a6e445b6",
+   "id": "c54cb45a",
    "metadata": {},
    "source": [
     "RESEARCH QUESTIONS\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46b8669",
+   "id": "428b9d23",
    "metadata": {},
    "source": [
     "DATASETS TO BE USED\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "093d7a7e",
+   "id": "ac6503f3",
    "metadata": {},
    "source": [
     "BREAKDOWN OF TASKS\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2833af9",
+   "id": "81caffaa",
    "metadata": {},
    "outputs": [],
    "source": []
