--- a/Final Project #1.ipynb
+++ b/Final Project #1.ipynb
@@ -759,6 +759,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ca302acc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# furture predictions based on y= mx+b of the post covid regresion line\n",
+    "x= pd.DataFrame(columns =[\"Date\"])\n",
+    "x[\"Date\"]= [\"2023-12-30\"]\n",
+    "x = x['Date'] = pd.to_datetime(x['Date']).astype(np.int64)\n",
+    "new_x =x[\"Date\"].iloc[0]\n",
+    "for tick in tickers:\n",
+    "    future_df= filtered_df[(filtered_df['Ticker'] == f'{tick}') & (filtered_df['Date'] <= pd.to_datetime('2020-03-09'))]\n",
+    "    X = np.asarray(future_df['Date Numeric']);\n",
+    "    Y = np.asarray(future_df['Market Cap']);\n",
+    "    model = linregress(X, Y)\n",
+    "    slope, intercept = model.slope, model.intercept\n",
+    "    predict = slope*new_x + intercept\n",
+    "    print(f\"the Market Cap 2023-12-30 prediction of {tick} is {predict}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "5f0f68e6",
    "metadata": {},
@@ -3638,7 +3660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
