--- a/Final Project #1.ipynb
+++ b/Final Project #1.ipynb
@@ -764,18 +764,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# furture predictions based on y= mx+b of the post covid regresion line\n",
+    "    # furture predictions based on y= mx+b of the post covid regresion line\n",
     "x= pd.DataFrame(columns =[\"Date\"])\n",
     "x[\"Date\"]= [\"2023-12-30\"]\n",
     "x = x['Date'] = pd.to_datetime(x['Date']).astype(np.int64)\n",
     "new_x =x[\"Date\"].iloc[0]\n",
     "for tick in tickers:\n",
-    "    future_df= filtered_df[(filtered_df['Ticker'] == f'{tick}') & (filtered_df['Date'] <= pd.to_datetime('2020-03-09'))]\n",
+    "    future_df= filtered_df[(filtered_df['Ticker'] == f'{tick}') & (filtered_df['Date'] >= pd.to_datetime('2023-01-01'))]\n",
+    "    #future_df = future_df[(filtered_df['Date'] <= pd.to_datetime('2023-07-01'))]\n",
     "    X = np.asarray(future_df['Date Numeric']);\n",
     "    Y = np.asarray(future_df['Market Cap']);\n",
     "    model = linregress(X, Y)\n",
     "    slope, intercept = model.slope, model.intercept\n",
     "    predict = slope*new_x + intercept\n",
+    "    today_df = filtered_df.loc[filtered_df[\"Date\"] == \"2023-07-31\"]  \n",
+    "    today_df =today_df.loc[filtered_df[\"Ticker\"]== f'{tick}']\n",
+    "    today = today_df[\"Market Cap\"].iloc[0] \n",
+    "    print(f'The market cap today of {tick} is {today}')\n",
     "    print(f\"the Market Cap 2023-12-30 prediction of {tick} is {predict}\")"
    ]
   },
