Market cap comparison df

--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -600,7 +600,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_16356\\2673999577.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_18280\\2673999577.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -748,6 +748,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ad99fb1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "71dd3262",
    "metadata": {},
@@ -769,6 +777,8 @@
    ],
    "source": [
     "        # furture predictions based on y= mx+b of the post covid regresion line\n",
+    "current_ls =[]\n",
+    "predic_ls = []\n",
     "x= pd.DataFrame(columns =[\"Date\"])\n",
     "x[\"Date\"]= [\"2023-12-30\"]\n",
     "x = x['Date'] = pd.to_datetime(x['Date']).astype(np.int64)\n",
@@ -784,9 +794,133 @@
     "    today_df = filtered_df.loc[filtered_df[\"Date\"] == \"2023-07-31\"]  \n",
     "    today_df =today_df.loc[filtered_df[\"Ticker\"]== f'{tick}']\n",
     "    today = today_df[\"Market Cap\"].iloc[0] \n",
+    "    current_ls.append(today)\n",
+    "    predic_ls.append(predict)\n",
     "    print(f'The market cap today of {tick} is {today}')\n",
     "    print(f\"the Market Cap 2023-12-30 prediction of {tick} is {predict}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7de280fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " the pre covid market cap for UAL is 22397975309.624\n",
+      " the pre covid market cap for DAL is 37873525207.83699\n",
+      " the pre covid market cap for AAL is 12112303257.599998\n",
+      " the pre covid market cap for LUV is 29007952247.750015\n"
+     ]
+    }
+   ],
+   "source": [
+    "# market cap before covid\n",
+    "cap_ls= []\n",
+    "dec_df = filtered_df.loc[filtered_df[\"Date\"] == \"2019-12-30\"]\n",
+    "for tick in tickers:\n",
+    "    loop_df= dec_df.loc[dec_df[\"Ticker\"] == tick]\n",
+    "    cap = loop_df[\"Market Cap\"].iloc[0]\n",
+    "    cap_ls.append(cap)\n",
+    "    print(f' the pre covid market cap for {tick} is {cap}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9ea1e170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Precovid Cap</th>\n",
+       "      <th>Current Cap</th>\n",
+       "      <th>Prediction Dec 23</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UAL</td>\n",
+       "      <td>2.239798e+10</td>\n",
+       "      <td>1.740244e+10</td>\n",
+       "      <td>1.860500e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DAL</td>\n",
+       "      <td>3.787353e+10</td>\n",
+       "      <td>2.967984e+10</td>\n",
+       "      <td>3.316699e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>1.211230e+10</td>\n",
+       "      <td>1.054163e+10</td>\n",
+       "      <td>1.102424e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LUV</td>\n",
+       "      <td>2.900795e+10</td>\n",
+       "      <td>2.031715e+10</td>\n",
+       "      <td>1.987056e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Ticker  Precovid Cap   Current Cap  Prediction Dec 23\n",
+       "0    UAL  2.239798e+10  1.740244e+10       1.860500e+10\n",
+       "1    DAL  3.787353e+10  2.967984e+10       3.316699e+10\n",
+       "2    AAL  1.211230e+10  1.054163e+10       1.102424e+10\n",
+       "3    LUV  2.900795e+10  2.031715e+10       1.987056e+10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "stock_anal=pd.DataFrame(list(zip(tickers, cap_ls, current_ls, predic_ls)),\n",
+    "              columns=[ 'Ticker','Precovid Cap','Current Cap', 'Prediction Dec 23'])\n",
+    "stock_anal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3362438c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
