--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -600,7 +600,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_18280\\2673999577.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_11388\\2673999577.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -771,7 +771,7 @@
       "The market cap today of AAL is 10541628579.84\n",
       "the Market Cap 2023-12-30 prediction of AAL is 11024244370.09645\n",
       "The market cap today of LUV is 20317149360.0\n",
-      "the Market Cap 2023-12-30 prediction of LUV is 19870562516.485744\n"
+      "the Market Cap 2023-12-30 prediction of LUV is 19636682895.26764\n"
      ]
     }
    ],
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9ea1e170",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
        "      <th>Ticker</th>\n",
        "      <th>Precovid Cap</th>\n",
        "      <th>Current Cap</th>\n",
-       "      <th>Prediction Dec 23</th>\n",
+       "      <th>Prediction Jan 24</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -888,36 +888,55 @@
        "      <td>LUV</td>\n",
        "      <td>2.900795e+10</td>\n",
        "      <td>2.031715e+10</td>\n",
-       "      <td>1.987056e+10</td>\n",
+       "      <td>1.963668e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Ticker  Precovid Cap   Current Cap  Prediction Dec 23\n",
+       "  Ticker  Precovid Cap   Current Cap  Prediction Jan 24\n",
        "0    UAL  2.239798e+10  1.740244e+10       1.860500e+10\n",
        "1    DAL  3.787353e+10  2.967984e+10       3.316699e+10\n",
        "2    AAL  1.211230e+10  1.054163e+10       1.102424e+10\n",
-       "3    LUV  2.900795e+10  2.031715e+10       1.987056e+10"
+       "3    LUV  2.900795e+10  2.031715e+10       1.963668e+10"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "stock_anal=pd.DataFrame(list(zip(tickers, cap_ls, current_ls, predic_ls)),\n",
-    "              columns=[ 'Ticker','Precovid Cap','Current Cap', 'Prediction Dec 23'])\n",
-    "stock_anal"
+    "stock_prediction=pd.DataFrame(list(zip(tickers, cap_ls, current_ls, predic_ls)),\n",
+    "              columns=[ 'Ticker','Precovid Cap','Current Cap', 'Prediction Jan 24'])\n",
+    "stock_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3362438c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82432914353.64317\n"
+     ]
+    }
+   ],
+   "source": [
+    "s =stock_prediction[\"Prediction Jan 24\"].sum()\n",
+    "print(s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3362438c",
+   "id": "ce4caf4e",
    "metadata": {},
    "outputs": [],
    "source": []
